# uprising-outreach

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  ROADMAP.md  Rapport Complet — Audit ProspectOS (localhost_3000.md  chrome-extension.crx  chrome-extension.pem  docker-compose.yml  make.ps1  package-lock.json  package.json  playwright.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml  sample_leads_quebec.csv
backend/alembic/: env.py
backend/alembic/versions/: 0001_workspaces_users.py  0002_companies_contacts.py  0003_leads_activity_suppression.py  0004_sender_accounts.py  0005_campaigns.py  0005_customization.py  0005_projects_files.py  0006_ai_conversations.py  0006_customization.py  0007_email_drafts.py  0007_inbox.py  0008_facebook_provider.py  0009_campaigns.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: nanoclaw.py  ollama_client.py  router.py  service.py
backend/app/ai_chat/: models.py  nanoclaw_bridge.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  invitation_service.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/campaigns/: models.py  router.py  schemas.py  service.py
backend/app/companies/: models.py  router.py  schemas.py  service.py
backend/app/contacts/: models.py  router.py  schemas.py  service.py
backend/app/customization/: models.py  router.py  schemas.py
backend/app/enrichment/: playwright_service.py
backend/app/inbox/: models.py  router.py  schemas.py  service.py
backend/app/jobs/: router.py
backend/app/leads/: models.py  models_drafts.py  router.py  schemas.py  service.py
backend/app/middleware/: audit_log.py  workspace_scope.py
backend/app/projects/: models.py  router.py  schemas.py  service.py
backend/scratch/: verify_config.py
backend/scripts/: seed_demo_leads.py
backend/tests/: conftest.py
docs/: NEXT_STEPS.md
(+164 files in other folders)
